Fixed Shirt Button Link again

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </a>
             </div>
             <div class="shirt-button">
-                <a href="'//gofund.me/steampunk"  target="_blank">
+                <a href="//gofund.me/steampunk"  target="_blank">
                     <button class="shirt-button"><img src="content/images/steampunk-franklin-shirts.png">
                     </button>
                 </a>
